# simple-docking

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  overview.md  start.sh
.agent/: skills
.claude/skills/api-endpoint/: SKILL.md
.claude/skills/doc-consistency/: SKILL.md
.claude/skills/documentation-sync/: SKILL.md
.claude/skills/user-manual/: SKILL.md
.github/workflows/: release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py  settings.py  tasks.py  util.py
backend/app/ligand_library/: manifest.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_batches.py  test_health.py  test_ligands.py  test_proteins.py  test_references.py  test_runs.py
docs/: README.md  USER_GUIDE.md  architecture.md  configuration.md  deploy.md  licenses.md  protein_library.md  roadmap.md  verification.md
docs/images/: README.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: Icons.jsx  Modal.css  Modal.jsx  PoseSnapshot.jsx  PropertiesPanel.jsx  Stepper.jsx  StickyFooter.css  StickyFooter.jsx  (+2 more)
nginx/: nginx.conf
protein_library/: manifest.json
scripts/: binding_sites.json  convert_to_pdbqt.py  extract_binding_sites.py  import_proteins.py  kinase_results.json  prepare_kinases.py  update_manifest.py  update_manifest_binding_sites.py
worker/: Dockerfile  pyproject.toml
worker/app/: models.py  pipeline.py  pocket.py  settings.py  tasks.py
(+18 files in other folders)
