[project]
name = "docking-backend"
version = "0.1.0"
description = "FastAPI backend for the docking dashboard"
requires-python = ">=3.10,<3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.32",
  "psycopg[binary]==3.2.1",
  "alembic==1.13.2",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "celery==5.4.0",
  "redis==5.0.8",
  "slowapi==0.1.9"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.2",
  "httpx==0.27.2"
]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
